feat: Added user and docker config (#11)
* feat: Added user config

* feat: Added docker files and configurations
