# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "Gerador de token de acesso",
+                "description": "Gera o token de acesso do usuário",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,35 +21,73 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Login",
                 "parameters": [
                     {
-                        "description": "Informações de login",
+                        "description": "Informações do acesso",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.userLogin"
+                            "$ref": "#/definitions/domain.UserLogin"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Token de acesso",
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Token"
+                        }
+                    },
+                    "400": {
+                        "description": "Parâmetro inválidos",
                         "schema": {
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Acesso não authorizado",
                         "schema": {
-                            "$ref": "#/definitions/controller.errorResponse"
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "description": "Criar novo usuário",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "parameters": [
+                    {
+                        "description": "Informações do usuário",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateUser"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.User"
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized",
+                    "400": {
+                        "description": "Parâmetro inválidos",
                         "schema": {
-                            "$ref": "#/definitions/controller.errorResponse"
+                            "type": "string"
                         }
                     }
                 }
@@ -245,15 +283,6 @@
         }
     },
     "definitions": {
-        "controller.errorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Error message"
-                }
-            }
-        },
         "controller.response": {
             "type": "object",
             "properties": {
@@ -267,16 +296,28 @@
                 }
             }
         },
-        "controller.userLogin": {
+        "domain.CreateUser": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "email"
+                    "example": "jhon.doel@example.com"
+                },
+                "first_name": {
+                    "type": "string",
+                    "example": "Jhon"
+                },
+                "last_name": {
+                    "type": "string",
+                    "example": "Doel"
                 },
                 "password": {
                     "type": "string",
                     "example": "s3cr3t3"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "jhondoel1995"
                 }
             }
         },
@@ -297,6 +338,58 @@
                 "name": {
                     "type": "string",
                     "example": "Example name"
+                }
+            }
+        },
+        "domain.Token": {
+            "type": "object",
+            "properties": {
+                "expires_in": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string",
+                    "example": "asdfas-asdfasd-asdf-asdf-asdf"
+                }
+            }
+        },
+        "domain.User": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "user@email.com"
+                },
+                "enabled": {
+                    "type": "boolean"
+                },
+                "first_name": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string",
+                    "example": "Doel"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "jhon_doel"
+                }
+            }
+        },
+        "domain.UserLogin": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "s3cr3t3"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "jhondoel"
                 }
             }
         }
